--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,18 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 </head>
+<!-- Google tag (gtag.js) // To get the stats of the users traffic -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FVG03VGWLE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-FVG03VGWLE');
+</script>
 
 <body>
   <div id="root"></div>
-
-
 </body>
 
 </html>
