Refactor style & Improve Navbar and Form logic

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/src/" />
+    <link rel="icon" type="image/png" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="light dark">
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <meta name="description" content="Ignacio Albiol's portfolio - Full Stack Developer specialized in React, Node.js, and modern web technologies. Check out my projects and get in touch.">
+    <meta name="keywords" content="web developer, full stack developer, react developer, javascript, node.js, portfolio">
+    <meta property="og:title" content="IAP - Full Stack Developer">
+    <meta property="og:description" content="Ignacio Albiol's portfolio - Full Stack Developer specialized in React, Node.js, and modern web technologies.">
+    <meta property="og:type" content="website">
+    
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <title>IAP - DEV</title>
   </head>
